--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,15 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+html {
+  font-size: 16px;
+  line-height: 1.5;
+  font-family: "Inter", sans-serif;
+  color: #222;
+  background-color: #fff;
+}
+
+body {
+  min-height: 100vh;
+}
