--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,14 @@ html {
 body {
   min-height: 100vh;
 }
+
+main {
+  display: flex;
+  justify-content: center;
+  border: 1px solid saddlebrown;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
