add padding to the main section for some spacing. secondly made the results div flex with flex direction of colum and a padding left of 20px

--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,17 @@ main {
   display: flex;
   justify-content: center;
   border: 1px solid saddlebrown;
+  padding: 10px;
 }
 
 form {
   display: flex;
   flex-direction: column;
+}
+
+div#results {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding-left: 20px;
 }
