--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,12 @@ html {
 body {
   min-height: 100vh;
   max-width: 700px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  margin: 0 auto;
 }
 
 main {
