--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
   flex-direction: column;
   margin: 0 auto;
 }
@@ -47,9 +46,18 @@ div#results {
 
 input {
   padding: 12px 15px;
-  margin-bottom: 20px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
+  margin-bottom: 5px;
   font-size: 16px;
-  transition: border-color 0.2s;
+  border: 1px solid gray;
+  text-align: center;
+}
+
+label {
+  margin-bottom: 5px;
+}
+
+input:focus {
+  border: 1px solid #007bff;
+  outline: none;
+  transition: border 150ms ease-in-out;
 }
