--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,10 @@ span {
   font-weight: 700;
   align-items: center;
 }
+
+#calculate {
+  padding: 10px;
+  font-size: 17px;
+  cursor: pointer;
+  /* background-color: #e5e5e5; */
+}
