--- a/css/style.css
+++ b/css/style.css
@@ -45,11 +45,16 @@ div#results {
 }
 
 input {
-  padding: 12px 15px;
+  padding: 7px 10px;
   margin-bottom: 5px;
   font-size: 16px;
   border: 1px solid gray;
   text-align: center;
+}
+
+input[type="text"] {
+  font-size: 25px;
+  font-weight: 500;
 }
 
 label {
