making some adjustments to the results div which will output the total, tip and per person, I wanted to align to the inputs

--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,11 @@ form {
 div#results {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-around;
   padding-left: 20px;
   width: 100%;
+  margin-bottom: 40px;
+  margin-top: 10px;
 }
 
 input {
