--- a/css/style.css
+++ b/css/style.css
@@ -88,3 +88,22 @@ span {
   margin-top: 10px;
   /* background-color: #e5e5e5; */
 }
+
+@media (max-width: 710px) {
+  body {
+    max-width: 95%;
+  }
+  div#results {
+    display: block;
+    margin: 0;
+    padding: 20px 0;
+  }
+  main {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border: 1px solid saddlebrown;
+    padding: 10px;
+    width: 100%;
+  }
+}
